[package]
name = "svcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sha2 = "0.10.2"
rand = "0.8.5"
clap = "3.2.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
